  * remove versioned download location from debian/copyright, it's always
    outdated and the base path will point to the download location just as
    well.
  * remove custom mknod usage and depend on udev | makedev (>= 2.3.1-85)
    instead (Closes: #393575).
  * Recommend module-assistant | kernel-package for lirc-source.
  * add LSB Description and Short-Description to initscript LSB stanza,
    borrowed from Ubuntu's lirc packages by Mario Limonciello 
    <superm1@ubuntu.com>.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 01 Feb 2008 18:00:14 +0100

lirc (0.8.2-1) experimental; urgency=low

  * Initial release of new upstream

 -- Sven Mueller <sven@debian.org>  Tue, 16 Oct 2007 18:28:57 +0200

lirc (0.8.0-14) unstable; urgency=low

  [ Christian Perrier ]
  * Debconf templates and debian/control reviewed by the debian-l10n-
    english team as part of the Smith review project. Closes: #443270, #443470
    (the latter bug is about outdated translations)

  [Debconf translation updates]

  * Japanese. Closes: #444091
  * Vietnamese. Closes: #444436
  * Galician. Closes: #444752
  * Russian. Closes: #445426
  * German. Closes: #445556, #446378
  * French. Closes: #445587
  * Finnish. Closes: #445650
  * Portuguese. Closes: #445653
  * Brazilian Portuguese. Closes: #445736
  * Czech. Closes: #445655

  [ Sven Mueller ]
  * Add compatibility patch for kernels >= 2.6.23 (closes: #446650)

 -- Sven Mueller <sven@debian.org>  Tue, 16 Oct 2007 17:02:54 +0200

lirc (0.8.0-13) unstable; urgency=low

  [ Loic Minier ]
  * Update 14_no_linux_config_h patch to also drop <linux/config.h> include
    from lirc_atiusb/lirc_atiusb.c, lirc_bt829/lirc_bt829.c,
    lirc_cmdir/lirc_cmdir.c, lirc_igorplugusb/lirc_igorplugusb.c,
    lirc_imon/lirc_imon.c, lirc_it87/lirc_it87.c, lirc_mceusb/lirc_mceusb.c,
    lirc_mceusb2/lirc_mceusb2.c, lirc_parallel/lirc_parallel.c,
    lirc_sasem/lirc_sasem.c, lirc_serial/lirc_serial.c, lirc_sir/lirc_sir.c,