@@ -19,10 +19,11 @@ lirc (0.8.2-1+c0.sidux.5) UNRELEASED; urgency=low
     instead (Closes: #393575).
   * Recommend module-assistant | kernel-package for lirc-source.
   * add LSB Description and Short-Description to initscript LSB stanza,
-    borrowed from Ubuntu's lirc packages by Mario Limonciello 
+    borrowed from Ubuntu's lirc packages by Mario Limonciello
     <superm1@ubuntu.com>.
+  * apply useful indention from Ubuntu to debian/rules.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 01 Feb 2008 18:00:14 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 01 Feb 2008 18:13:36 +0100
 
 lirc (0.8.2-1) experimental; urgency=low
 
